Fix nowrap class regression

--- a/src/components/GridBlock/GridBlock.scss
+++ b/src/components/GridBlock/GridBlock.scss
@@ -17,3 +17,8 @@ $rem-pixel: ((1/$g-font-size) * 1rem);
     margin-left: rem-calc($grid-gutter-width * -1);
     margin-right: rem-calc($grid-gutter-width * -1);
 }
+
+
+.nowrap {
+    flex-wrap: nowrap;
+}
